--- a/meteorology/Main.storyboard
+++ b/meteorology/Main.storyboard
@@ -359,7 +359,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AlN-pa-9cV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="234" y="586"/>
+            <point key="canvasLocation" x="215" y="593"/>
         </scene>
         <!--社区-->
         <scene sceneID="RmC-VA-Tux">
@@ -461,6 +461,9 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="qf4-fg-fqP" secondAttribute="trailing" constant="0.5" id="zbp-pc-5zR"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="0ed-xU-oe4" kind="show" id="Y2v-K6-mJc"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -600,6 +603,163 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GWW-2n-Jmu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="762" y="-142"/>
+        </scene>
+        <!--帖子详情-->
+        <scene sceneID="0Hp-Wo-olz">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="0ed-xU-oe4" customClass="BBSNewDetailViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A47-IC-9Fo"/>
+                        <viewControllerLayoutGuide type="bottom" id="QCX-he-6Bo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eIl-3j-e8A">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jur-6i-ygA">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="replycell" rowHeight="90" id="B3P-JH-DbV">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="B3P-JH-DbV" id="2A6-YC-3Ce">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="sjE-cf-E6O">
+                                                    <rect key="frame" x="8" y="8" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="azH-Nu-nf1"/>
+                                                        <constraint firstAttribute="width" constant="30" id="vqo-78-Ocz"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="15"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sgm-gG-aJr">
+                                                    <rect key="frame" x="46" y="12" width="30.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9F3-zC-Tfw">
+                                                    <rect key="frame" x="281" y="15" width="30.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSO-Ju-0PK">
+                                                    <rect key="frame" x="16" y="46" width="296" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XSO-Ju-0PK" firstAttribute="top" secondItem="sjE-cf-E6O" secondAttribute="bottom" constant="8" id="0Hz-M8-YFT"/>
+                                                <constraint firstItem="sjE-cf-E6O" firstAttribute="leading" secondItem="2A6-YC-3Ce" secondAttribute="leadingMargin" id="Ekb-Ve-W0d"/>
+                                                <constraint firstItem="9F3-zC-Tfw" firstAttribute="trailing" secondItem="2A6-YC-3Ce" secondAttribute="trailingMargin" id="HBD-WG-8ze"/>
+                                                <constraint firstItem="XSO-Ju-0PK" firstAttribute="leading" secondItem="2A6-YC-3Ce" secondAttribute="leadingMargin" constant="8" id="NfQ-QL-g2O"/>
+                                                <constraint firstItem="Sgm-gG-aJr" firstAttribute="leading" secondItem="sjE-cf-E6O" secondAttribute="trailing" constant="8" symbolic="YES" id="SWI-0w-bZf"/>
+                                                <constraint firstItem="Sgm-gG-aJr" firstAttribute="top" secondItem="2A6-YC-3Ce" secondAttribute="topMargin" constant="4" id="T0Y-GB-kEX"/>
+                                                <constraint firstItem="sjE-cf-E6O" firstAttribute="top" secondItem="2A6-YC-3Ce" secondAttribute="topMargin" id="Yns-2p-hrd"/>
+                                                <constraint firstItem="sjE-cf-E6O" firstAttribute="leading" secondItem="2A6-YC-3Ce" secondAttribute="leadingMargin" id="fLK-SG-wgd"/>
+                                                <constraint firstItem="sjE-cf-E6O" firstAttribute="centerY" secondItem="Sgm-gG-aJr" secondAttribute="centerY" constant="0.5" id="hWM-VT-Ho5"/>
+                                                <constraint firstItem="Sgm-gG-aJr" firstAttribute="centerY" secondItem="9F3-zC-Tfw" secondAttribute="centerY" id="rdH-iJ-fft"/>
+                                                <constraint firstItem="XSO-Ju-0PK" firstAttribute="trailing" secondItem="2A6-YC-3Ce" secondAttribute="trailingMargin" id="xxf-ei-Tvb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="bbscell" rowHeight="282" id="38h-tR-jla">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="38h-tR-jla" id="T1y-Cp-3F4">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTD-bx-yc7">
+                                                    <rect key="frame" x="139" y="8" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6e-f5-H5o">
+                                                    <rect key="frame" x="8" y="36" width="304" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ROc-HP-rmU">
+                                                    <rect key="frame" x="8" y="61" width="304" height="200"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="200" id="aXO-Kl-oSR"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dTD-bx-yc7" firstAttribute="top" secondItem="T1y-Cp-3F4" secondAttribute="topMargin" id="0nv-Xo-X5y"/>
+                                                <constraint firstItem="ROc-HP-rmU" firstAttribute="leading" secondItem="T1y-Cp-3F4" secondAttribute="leadingMargin" id="7Za-ci-a8Q"/>
+                                                <constraint firstItem="W6e-f5-H5o" firstAttribute="leading" secondItem="T1y-Cp-3F4" secondAttribute="leadingMargin" id="V2z-ny-rW0"/>
+                                                <constraint firstItem="ROc-HP-rmU" firstAttribute="top" secondItem="W6e-f5-H5o" secondAttribute="bottom" constant="8" id="VN8-ga-a9l"/>
+                                                <constraint firstItem="ROc-HP-rmU" firstAttribute="trailing" secondItem="T1y-Cp-3F4" secondAttribute="trailingMargin" id="fqi-ob-j0W"/>
+                                                <constraint firstItem="W6e-f5-H5o" firstAttribute="top" secondItem="dTD-bx-yc7" secondAttribute="bottom" constant="8" id="mom-l8-xTM"/>
+                                                <constraint firstAttribute="centerX" secondItem="dTD-bx-yc7" secondAttribute="centerX" id="nHK-yQ-L5W"/>
+                                                <constraint firstItem="W6e-f5-H5o" firstAttribute="trailing" secondItem="T1y-Cp-3F4" secondAttribute="trailingMargin" id="wTd-qq-P60"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="0ed-xU-oe4" id="MH4-CS-KTY"/>
+                                    <outlet property="delegate" destination="0ed-xU-oe4" id="mKw-VJ-Ik3"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CTD-l4-h6U" userLabel="ContainerView">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入回帖内容" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Opq-bU-xQU">
+                                        <rect key="frame" x="10" y="10" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="3rB-81-wTA"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="send"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="0ed-xU-oe4" id="bUU-E2-wy6"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.74117647060000003" green="0.76470588240000004" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Opq-bU-xQU" secondAttribute="trailing" constant="10" id="623-Kv-lFE"/>
+                                    <constraint firstItem="Opq-bU-xQU" firstAttribute="leading" secondItem="CTD-l4-h6U" secondAttribute="leading" constant="10" id="anC-y4-FX8"/>
+                                    <constraint firstAttribute="bottom" secondItem="Opq-bU-xQU" secondAttribute="bottom" constant="10" id="mVy-Ut-t7e"/>
+                                    <constraint firstAttribute="height" constant="50" id="wsc-xv-1sd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="CTD-l4-h6U" secondAttribute="trailing" id="Ddu-bc-h8r"/>
+                            <constraint firstItem="jur-6i-ygA" firstAttribute="leading" secondItem="eIl-3j-e8A" secondAttribute="leading" id="DoM-fM-1ba"/>
+                            <constraint firstItem="CTD-l4-h6U" firstAttribute="top" secondItem="jur-6i-ygA" secondAttribute="bottom" id="InR-oF-lJo"/>
+                            <constraint firstAttribute="trailing" secondItem="jur-6i-ygA" secondAttribute="trailing" id="m8j-YW-Nsx"/>
+                            <constraint firstAttribute="bottom" secondItem="CTD-l4-h6U" secondAttribute="bottom" id="pGY-3p-UOl"/>
+                            <constraint firstItem="jur-6i-ygA" firstAttribute="top" secondItem="eIl-3j-e8A" secondAttribute="top" id="qP3-aQ-Pg7"/>
+                            <constraint firstItem="CTD-l4-h6U" firstAttribute="leading" secondItem="eIl-3j-e8A" secondAttribute="leading" id="slU-bT-Kbo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="帖子详情" id="ixp-cc-4aa"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="containerViewBottomConstraint" destination="pGY-3p-UOl" id="jyN-yb-5Zm"/>
+                        <outlet property="tableView" destination="jur-6i-ygA" id="wbL-vY-gsB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UfA-eI-O9p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="770" y="564"/>
         </scene>
     </scenes>
     <resources>
