--- a/meteorology/Main.storyboard
+++ b/meteorology/Main.storyboard
@@ -948,6 +948,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="hnl-sP-pql">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="上拉加载更多" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kj2-DB-fbk">
+                                    <rect key="frame" x="116" y="12" width="109" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="gEy-Vh-4Z2">
+                                    <rect key="frame" x="88" y="12" width="20" height="20"/>
+                                </activityIndicatorView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="maintopiccell" rowHeight="124" id="a0g-EB-xtH">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -1054,6 +1070,9 @@
                             <action selector="onRefresh:" destination="L6t-jQ-mhw" eventType="valueChanged" id="1we-QN-RH1"/>
                         </connections>
                     </refreshControl>
+                    <connections>
+                        <outlet property="footView" destination="hnl-sP-pql" id="YF7-5X-u50"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wsV-O1-xeI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="WFX-et-bTw" userLabel="Exit" sceneMemberID="exit"/>
